syntax = "proto3";

package malonaz.codegen.aip.v1;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";

option go_package = "github.com/malonaz/core/genproto/codegen/aip/v1";

// Extension for method options to mark methods as standard AIP methods (Create, Get, Update, Delete, List).
extend google.protobuf.MethodOptions {
  // Extension for standard method.
  StandardMethod standard_method = 93000;
}

// Extensions for message options to configure AIP list and update behaviors.
extend google.protobuf.MessageOptions {
  //  The uuid namespace for a resource.
  string uuid_namespace = 92000;

  // Configuration for AIP Update RPCs, including field mask handling and authorization.
  UpdateOptions update = 920013;

  // Option for pagination.
  PaginationOptions pagination = 94000;
  // Option for ordering.
  OrderingOptions ordering = 94001;
  // Option for ordering.
  FilteringOptions filtering = 94002;
}

// Options for filtering.
message FilteringOptions {
  // List of fields that can be used in the filter expression.
  // Can use * or some.path.* wildcards.
  repeated string paths = 1;
}

// Options for pagination.
message PaginationOptions {
  // The default number of items to return per page.
  uint32 default_page_size = 1 [(buf.validate.field).uint32.gt = 0];
}

// Options for ordering.
message OrderingOptions {
  // List of fields that can be used in the filter expression.
  // Can use * or some.path.* wildcards.
  repeated string paths = 1 [(buf.validate.field).required = true];
  // The default ordering by option.
  string default = 2 [(buf.validate.field).required = true];
}

// Configuration options for AIP-compliant Update methods.
// Defines which fields can be updated and how field masks are processed.
message UpdateOptions {
  // List of field paths that users are authorized to update.
  // Only fields listed here (or matching wildcard patterns) can be modified via Update RPCs.
  // This provides fine-grained access control at the field level.
  repeated string paths = 1;
}

// Marks a method as a standard AIP method (Create, Get, Update, Delete, or List).
// The protoc-templates plugin uses this to generate appropriate server and client code.
message StandardMethod {
  // The resource type this method operates on (e.g., "example.com/User").
  // Must match a resource type defined in google.api.resource annotations.
  // Used to determine request/response message types and validate method naming.
  string resource = 1;
  // Emit an event for this action, using github.com/malonaz/pgq.
  // Only supported on CREATE, UPDATE & DELETE methods.
  bool emit_event = 2;
}
